<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guessMovieActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".GuessMovieActivity">


    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"
            android:text="@string/guessMovie_titleText"
            android:textSize="50sp" />

    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/optionsLayout"
        android:layout_below="@id/title">

        <ImageView
            android:id="@+id/movieImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/image01_ddlj" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:layout_above="@id/score">


        <LinearLayout
            android:id="@+id/optLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="start">

            <Button
                android:id="@+id/option1"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/guessMovie01_option1" />

            <Button
                android:id="@+id/option2"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/guessMovie01_option2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="end">

            <Button
                android:id="@+id/option3"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/guessMovie01_option3" />

            <Button
                android:id="@+id/option4"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/guessMovie01_option4" />
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimaryDark"
            android:text="SCORE: 0/15"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:layout_above="@id/progressBar"
            android:layout_marginBottom="40dp"/>

    <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:indeterminate="false" />

</RelativeLayout>